[gd_scene load_steps=3 format=2]

[ext_resource path="res://space-wolves/HUD.gd" type="Script" id=1]
[ext_resource path="res://addons/toolbox_project/assets/theme.tres" type="Theme" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TopBox" type="HBoxContainer" parent="MarginContainer/BaseBox"]
margin_right = 984.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BaseBox/TopBox"]
margin_right = 490.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cash" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer"]
margin_right = 490.0
margin_bottom = 16.0
size_flags_vertical = 3
text = "Cash: $0"

[node name="PredatorPop" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer"]
margin_top = 20.0
margin_right = 490.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "Predator Pop: 5"

[node name="PreyPop" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer"]
margin_top = 40.0
margin_right = 490.0
margin_bottom = 56.0
size_flags_vertical = 3
text = "Prey Pop: 5"

[node name="ResoursePop" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer"]
margin_top = 60.0
margin_right = 490.0
margin_bottom = 76.0
size_flags_vertical = 3
text = "Resource Pop: 5"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/BaseBox/TopBox"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/BaseBox/TopBox/VBoxContainer2"]
margin_right = 490.0
margin_bottom = 14.0
size_flags_horizontal = 3
max_value = 30.0
step = 1.0

[node name="Round" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer2"]
margin_top = 18.0
margin_right = 490.0
margin_bottom = 58.0
size_flags_vertical = 3
text = "Round 1"

[node name="TargetLabel" type="Label" parent="MarginContainer/BaseBox/TopBox/VBoxContainer2"]
margin_top = 62.0
margin_right = 490.0
margin_bottom = 76.0
text = "Current Target: Null"

[node name="MiddleBox" type="CenterContainer" parent="MarginContainer/BaseBox"]
margin_top = 80.0
margin_right = 984.0
margin_bottom = 384.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="AlertBox" type="AcceptDialog" parent="MarginContainer/BaseBox/MiddleBox"]
margin_left = 259.0
margin_top = 105.0
margin_right = 725.0
margin_bottom = 198.0
theme = ExtResource( 2 )
dialog_text = "You don't have enough money for this action!"

[node name="BottomGrid" type="GridContainer" parent="MarginContainer/BaseBox"]
modulate = Color( 1, 1, 1, 0.745098 )
show_behind_parent = true
margin_left = 342.0
margin_top = 388.0
margin_right = 642.0
margin_bottom = 559.0
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/vseparation = 1

[node name="PredatorSPawn" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
margin_right = 300.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Introduce Predator"

[node name="PreySpawn" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 85.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Introduce Prey"

[node name="ResourceSpawn" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
margin_top = 86.0
margin_right = 300.0
margin_bottom = 128.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Cultivate Flora"

[node name="PredatorKill" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
visible = false
margin_top = 174.0
margin_right = 277.0
margin_bottom = 216.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Predator: Kill"

[node name="PreyKill" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
margin_top = 129.0
margin_right = 300.0
margin_bottom = 171.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Hunt Target"

[node name="ResourceKill" type="Button" parent="MarginContainer/BaseBox/BottomGrid"]
visible = false
margin_top = 232.0
margin_right = 277.0
margin_bottom = 274.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Resource: Collect"

[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/PredatorSPawn" to="." method="_on_PredatorSPawn_pressed"]
[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/PreySpawn" to="." method="_on_PreySpawn_pressed"]
[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/ResourceSpawn" to="." method="_on_ResourceSpawn_pressed"]
[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/PredatorKill" to="." method="_on_PredatorKill_pressed"]
[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/PreyKill" to="." method="_on_PreyKill_pressed"]
[connection signal="pressed" from="MarginContainer/BaseBox/BottomGrid/ResourceKill" to="." method="_on_ResourceKill_pressed"]
