extends CanvasLayer

onready var Cash = $MarginContainer/BaseBox/TopBox/VBoxContainer/Cash
onready var PredatorPop = $MarginContainer/BaseBox/TopBox/VBoxContainer/Cash
onready var PreyPop = $"MarginContainer/BaseBox/TopBox/VBoxContainer/Predator pop"
onready var ResoursePop = $"MarginContainer/BaseBox/TopBox/VBoxContainer/Resourse Pop"
onready var Progress = $MarginContainer/BaseBox/TopBox/VBoxContainer2/ProgressBar
onready var Round = $MarginContainer/BaseBox/TopBox/VBoxContainer2/Round
